<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/BottomNavViewItemChat"
        android:icon="@drawable/ic_email_black_24dp"
        android:title="@string/navigation_view_item_messages" />
    <item
        android:id="@+id/BottomNavViewItemCreate"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/navigation_view_item_create_meeting" />
    <item
        android:id="@+id/BottomNavViewItemMeetings"
        android:icon="@drawable/ic_apps_black_24dp"
        android:title="@string/navigation_view_item_meetings" />
    <item
        android:id="@+id/BottomNavViewItemDone"
        android:icon="@drawable/ic_done"
        android:title="@string/navigation_view_item_meetings_done" />
    <item
        android:id="@+id/BottomNavViewItemProfile"
        android:icon="@drawable/ic_person"
        android:title="@string/navigation_view_item_profile" />
</menu>